Learning concepts of Rest Assured: created CRUD API testing.